add template and readme.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Актуальные спецпредложения</h1>
       <div class="cards_inner">
         <div class="card">
-          <div class="top" style="background-image: url(../img/card_1.png);">
+          <div class="top" style="background-image: url(img/card_1.png);">
             <a href="#">Косметология</a>
           </div>
           <div class="bottom">
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="top" style="background-image: url(../img/card_2.png);">
+          <div class="top" style="background-image: url(img/card_2.png);">
             <a href="#">Косметология</a>
           </div>
           <div class="bottom">
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="top" style="background-image: url(../img/card_3.png);">
+          <div class="top" style="background-image: url(img/card_3.png);">
             <a href="#">Косметология</a>
           </div>
           <div class="bottom">
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="top" style="background-image: url(../img/card_4.png);">
+          <div class="top" style="background-image: url(img/card_4.png);">
             <a href="#">Косметология</a>
           </div>
           <div class="bottom">
